# BugInjectorTN

./: README.md  detect_uc_joern.py  getDataValue.py  output.json  output_trace.json
site-extractor-develop/: AUTHORS  CMakeCache.txt  CMakeLists.txt  README.md
site-extractor-develop/docker/: Dockerfile  README.md
site-extractor-develop/prep/: README.md  callgrind_all.sh  dictionary.py  format.py  interestingFunctionsForSatese.txt  occurencesFunctionsWireshark+pcap.txt  occurencesFunctionsWireshark.txt  sanitize.sh  satesePrep.py
site-extractor-develop/src/: main.cpp
site-extractor-develop/src/Scripts/: output  output.json  output.txt  output2  outputtemp  tests  tests.txt  var.sh
site-extractor-develop/src/includes/: buffer-underflow.hpp  buffer-write-array.hpp  buffer-write-functions.hpp  cast-pointer.hpp  critical-functions.hpp  double-free.hpp  input.hpp  inputprof2.hpp  integer-overflow.hpp  intersec-function-null-pointer-init.hpp  intersec-function-null-pointer.hpp  intersec-function-tvb_get_ptr.hpp  matcher.hpp  return-expr.hpp  while-loop-null-pointer-condition.hpp
site-extractor-develop/src/matchers/: buffer-underflow.cpp  buffer-write-array.cpp  buffer-write-functions.cpp  cast-pointer.cpp  critical-functions.cpp  double-free.cpp  input.cpp  matcher.cpp  (+8 more)
site-extractor-develop/tests/: buffer-underflow.c  buffer-write-array.c  buffer-write-functions.c  cast-pointer.c  double-free.c  functions.c  input.c  integer-overflow.c  malloc-calls.c  output  output.txt  prgm_test.c  return-expr.c  test_fopen.c  test_scanf.c  while-loop-null-pointer-condition.c
(+6 files in other folders)
